# freakworld-githubt

./: .gitignore  CMakeLists.txt  License.txt  README.md  TODO.txt  buildShader.bat  main.cpp
Gameplay/: Objects.h  Player.cpp  Player.h  Scene.cpp  Scene.h  Scene.hpp  Script.h
Gameplay/Objects/: Dynamic_Object.cpp  Dynamic_Object.h  Object.cpp  Object.h  StaticObject_BoxForm.cpp  Static_Object.cpp  Static_Object.h
System/: Config.hpp  Discord.hpp  Handlers.cpp  Handlers.h  Range.hpp  Util.cpp  Util.hpp  Window.cpp  Window.h
System/DiscordRPC/: discord_rpc.h
System/DiscordRPC/lib/: discord-rpc-debug.lib  discord-rpc.lib
System/Graphics/: Button.cpp  Button.h  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Label.cpp  Label.h  Shader.cpp  Shader.hpp  String.cpp  String.hpp  TextAreas.h  TextAreas.hpp
System/Graphics/TextAreas/: BaseTextArea.cpp  BaseTextArea.h  BaseTextArea.hpp  CompoundTextArea.cpp  CompoundTextArea.h  CompoundTextArea.hpp  DancingTextArea.cpp  DancingTextArea.hpp
System/Graphics/shaders/: frag.spv  shader.frag  shader.vert
System/IODevices/: Event.cpp  Event.hpp
System/VulkanPP/: Base.hpp  Device.cpp  Device.hpp  DeviceMemory.hpp
System/Window/: Vulkan.cpp  Vulkan.hpp  Window.cpp  Window.hpp
Util/: VInc.hpp
gameplay/: Object.cpp  Object.h  Objects.h  Player.cpp  Player.h  Scene.cpp  Scene.h  Script.h
gameplay/Objects/: Dynamic_Object.cpp  Dynamic_Object.h  Object.cpp  Object.h  StaticObject_BoxForm.cpp  Static_Object.cpp  Static_Object.h
